add tts sft training code;add technical report;

--- a/cookbooks/demo.ipynb
+++ b/cookbooks/demo.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4770bf52-16aa-486e-9a5e-dad64a8ad658",
    "metadata": {
     "execution": {
-     "shell.execute_reply.end": "2025-10-01T13:46:36.742745Z",
-     "shell.execute_reply.started": "2025-10-01T13:46:36.738714Z",
-     "to_execute": "2025-10-01T13:46:36.673Z"
+     "shell.execute_reply.end": "2025-10-27T07:11:40.070812Z",
+     "shell.execute_reply.started": "2025-10-27T07:11:40.067295Z",
+     "to_execute": "2025-10-27T07:11:40.179Z"
     },
     "isLargeOutputDisplay": true,
     "libroFormatter": "formatter-string",
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/mnt3/qiuzhihao.qzh/Ming-Lite-UniAudio\n"
+      "/root/Ming-Lite-UniAudio\n"
      ]
     },
     {
@@ -51,11 +51,7 @@
    "execution_count": null,
    "id": "e00bfc4a-38b2-4afa-899b-1ea0c6483c7b",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-10-01T13:47:13.832616Z",
-     "shell.execute_reply.started": "2025-10-01T13:46:45.430862Z",
-     "to_execute": "2025-10-01T13:46:45.379Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": true,
     "libroFormatter": "formatter-string",
     "trusted": true
@@ -65,16 +61,51 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "[2025-10-01 21:46:50,270] [INFO] [add_hooks.py:71:__init__] If you are working on AIStudio, please set 'ANTMONITOR_TFEVENT_PATH' env.\n",
-      "Loading checkpoint shards: 100%|██████████| 8/8 [00:02<00:00,  3.82it/s]\n",
+      "[2025-10-27 15:05:24,009] [INFO] [add_hooks.py:71:__init__] If you are working on AIStudio, please set 'ANTMONITOR_TFEVENT_PATH' env.\n",
+      "2025-10-27 15:05:24,930 - datasets - INFO - PyTorch version 2.6.0 available.\n",
+      "BailingMMNativeForConditionalGeneration has generative capabilities, as `prepare_inputs_for_generation` is explicitly defined. However, it doesn't directly inherit from `GenerationMixin`. From 👉v4.50👈 onwards, `PreTrainedModel` will NOT inherit from `GenerationMixin`, and this model will lose the ability to call `generate` and other related functions.\n",
+      "  - If you're using `trust_remote_code=True`, you can get rid of this warning by loading the model with an auto class. See https://huggingface.co/docs/transformers/en/model_doc/auto#auto-classes\n",
+      "  - If you are the owner of the model architecture code, please modify your model class such that it inherits from `GenerationMixin` (after `PreTrainedModel`, otherwise you'll get an exception).\n",
+      "  - If you are not the owner of the model architecture class, please contact the model code owner to update it.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dce4754e6cda4c57bbb5931216f34c25",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/8 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at inclusionAI/Ming-UniAudio-16B-A3B were not used when initializing BailingMMNativeForConditionalGeneration: ['audio.decoder.semantic_model.conv1.bias', 'audio.decoder.semantic_model.conv1.weight', 'audio.decoder.semantic_model.conv2.bias', 'audio.decoder.semantic_model.conv2.weight', 'audio.decoder.semantic_model.positional_embedding']\n",
+      "- This IS expected if you are initializing BailingMMNativeForConditionalGeneration from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BailingMMNativeForConditionalGeneration from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "BailingMMNativeForConditionalGeneration has generative capabilities, as `prepare_inputs_for_generation` is explicitly defined. However, it doesn't directly inherit from `GenerationMixin`. From 👉v4.50👈 onwards, `PreTrainedModel` will NOT inherit from `GenerationMixin`, and this model will lose the ability to call `generate` and other related functions.\n",
+      "  - If you're using `trust_remote_code=True`, you can get rid of this warning by loading the model with an auto class. See https://huggingface.co/docs/transformers/en/model_doc/auto#auto-classes\n",
+      "  - If you are the owner of the model architecture code, please modify your model class such that it inherits from `GenerationMixin` (after `PreTrainedModel`, otherwise you'll get an exception).\n",
+      "  - If you are not the owner of the model architecture class, please contact the model code owner to update it.\n",
+      "BailingMMNativeForConditionalGeneration has generative capabilities, as `prepare_inputs_for_generation` is explicitly defined. However, it doesn't directly inherit from `GenerationMixin`. From 👉v4.50👈 onwards, `PreTrainedModel` will NOT inherit from `GenerationMixin`, and this model will lose the ability to call `generate` and other related functions.\n",
+      "  - If you're using `trust_remote_code=True`, you can get rid of this warning by loading the model with an auto class. See https://huggingface.co/docs/transformers/en/model_doc/auto#auto-classes\n",
+      "  - If you are the owner of the model architecture code, please modify your model class such that it inherits from `GenerationMixin` (after `PreTrainedModel`, otherwise you'll get an exception).\n",
+      "  - If you are not the owner of the model architecture class, please contact the model code owner to update it.\n",
+      "Fusing experts: 100%|██████████| 28/28 [01:12<00:00,  2.59s/it]\n",
       "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n"
      ]
     }
    ],
    "source": [
     "import warnings\n",
+    "from peft import PeftModel\n",
     "import torch\n",
     "from transformers import AutoProcessor\n",
     "import os\n",
@@ -107,13 +138,20 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "class MingAudio:\n",
-    "    def __init__(self, model_path, device=\"cuda:0\"):\n",
+    "    def __init__(self, model_path, lora_path=None, device=\"cuda:0\", use_grouped_gemm=True):\n",
     "        self.device = device\n",
     "        self.model = BailingMMNativeForConditionalGeneration.from_pretrained(\n",
     "            model_path,\n",
     "            torch_dtype=torch.bfloat16,\n",
     "            low_cpu_mem_usage=True,\n",
-    "        ).eval().to(torch.bfloat16).to(self.device)\n",
+    "        ).to(self.device)\n",
+    "\n",
+    "        if use_grouped_gemm and not self.model.config.llm_config.use_grouped_gemm:\n",
+    "            self.model.model.fuse_experts()\n",
+    "\n",
+    "        if lora_path is not None:\n",
+    "            self.model = PeftModel.from_pretrained(self.model, lora_path)\n",
+    "        self.model = self.model.eval().to(torch.bfloat16).to(self.device)\n",
     "        self.processor = AutoProcessor.from_pretrained(\".\", trust_remote_code=True)\n",
     "        self.tokenizer = self.processor.tokenizer\n",
     "        self.sample_rate = self.processor.audio_processor.sample_rate\n",
@@ -123,10 +161,7 @@
     "    def init_tn_normalizer(self, config_file_path=None, tokenizer=None):\n",
     "\n",
     "        if config_file_path is None:\n",
-    "            default_config_path = os.path.join(\n",
-    "                os.path.dirname(os.path.dirname(os.path.realpath(__file__))), \n",
-    "                \"sentence_manager/default_config.yaml\"\n",
-    "            )\n",
+    "            default_config_path = \"sentence_manager/default_config.yaml\"\n",
     "            config_file_path = default_config_path\n",
     "        with open(config_file_path, 'r') as f:\n",
     "            self.sentence_manager_config = yaml.safe_load(f)\n",
@@ -255,11 +290,7 @@
    "execution_count": null,
    "id": "170c71f9-336a-433a-9e4a-a6980b938e4d",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-09-30T12:54:28.288569Z",
-     "shell.execute_reply.started": "2025-09-30T12:54:26.623333Z",
-     "to_execute": "2025-09-30T12:54:26.556Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": true,
     "libroFormatter": "formatter-string",
     "trusted": true
@@ -299,14 +330,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2de9ed2d-0eb5-4720-b9bc-4e5555ff8827",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-10-01T13:47:31.844488Z",
-     "shell.execute_reply.started": "2025-10-01T13:47:27.411064Z",
-     "to_execute": "2025-10-01T13:47:27.344Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": false,
     "libroFormatter": "formatter-string",
     "trusted": true
@@ -424,14 +451,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "41cc7088-a1ec-4e17-84d3-6047a30a6557",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-09-30T12:56:01.997703Z",
-     "shell.execute_reply.started": "2025-09-30T12:55:48.795689Z",
-     "to_execute": "2025-09-30T12:55:48.789Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": true,
     "libroFormatter": "formatter-string",
     "trusted": true
@@ -493,11 +516,7 @@
    "execution_count": null,
    "id": "42dcaf98-133e-4f77-83e6-4b9c7b1eb096",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-09-30T12:57:10.168924Z",
-     "shell.execute_reply.started": "2025-09-30T12:57:03.240371Z",
-     "to_execute": "2025-09-30T12:57:03.392Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": true,
     "libroFormatter": "formatter-string",
     "trusted": true
@@ -537,14 +556,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2813319d-6664-4acd-b5b2-62dedeb905c0",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-09-30T13:01:17.727209Z",
-     "shell.execute_reply.started": "2025-09-30T13:01:12.996745Z",
-     "to_execute": "2025-09-30T13:01:13.002Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": true,
     "libroFormatter": "formatter-string",
     "trusted": true
@@ -583,14 +598,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "81350375-59fd-47e6-a145-bd8abcc397c8",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-09-30T13:02:55.737318Z",
-     "shell.execute_reply.started": "2025-09-30T13:02:49.667764Z",
-     "to_execute": "2025-09-30T13:02:49.650Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": true,
     "libroFormatter": "formatter-string",
     "trusted": true
@@ -629,14 +640,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "70e50ebb-6600-46fe-8135-1bb58b202c81",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-09-30T13:05:22.754867Z",
-     "shell.execute_reply.started": "2025-09-30T13:05:08.896957Z",
-     "to_execute": "2025-09-30T13:05:08.858Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": true,
     "libroFormatter": "formatter-string",
     "trusted": true
@@ -675,14 +682,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "5ed9e33c-55ea-48cc-b03e-2ab83ed28225",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-09-30T13:07:17.858355Z",
-     "shell.execute_reply.started": "2025-09-30T13:07:10.192253Z",
-     "to_execute": "2025-09-30T13:07:10.171Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": true,
     "libroFormatter": "formatter-string",
     "trusted": true
@@ -720,14 +723,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "af233811-ed22-40b1-981d-1260dc64988d",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-09-30T13:09:01.877116Z",
-     "shell.execute_reply.started": "2025-09-30T13:08:56.059672Z",
-     "to_execute": "2025-09-30T13:08:56.029Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": true,
     "libroFormatter": "formatter-string",
     "trusted": true
@@ -765,14 +764,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "6808b6e2-72ea-458d-b76e-6b4fdb7fd8b5",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-09-30T13:10:14.949269Z",
-     "shell.execute_reply.started": "2025-09-30T13:10:09.123805Z",
-     "to_execute": "2025-09-30T13:10:09.105Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": true,
     "libroFormatter": "formatter-string",
     "trusted": true
@@ -811,14 +806,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "fffeeb20-f456-492a-baee-45ab515614e7",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-09-30T13:13:11.906804Z",
-     "shell.execute_reply.started": "2025-09-30T13:13:06.101381Z",
-     "to_execute": "2025-09-30T13:13:06.098Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": true,
     "libroFormatter": "formatter-string",
     "trusted": true
@@ -857,14 +848,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "7d38c1b9-d6de-47b5-91b7-59753af52ece",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-09-30T13:11:41.341147Z",
-     "shell.execute_reply.started": "2025-09-30T13:11:39.308476Z",
-     "to_execute": "2025-09-30T13:11:39.284Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": false,
     "libroFormatter": "formatter-string",
     "trusted": true
@@ -902,14 +889,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "d6818341-6680-4ada-8927-0c669648ec77",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-09-30T13:21:47.386263Z",
-     "shell.execute_reply.started": "2025-09-30T13:21:42.078520Z",
-     "to_execute": "2025-09-30T13:21:42.085Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": true,
     "libroFormatter": "formatter-string",
     "trusted": true
@@ -948,14 +931,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "75e9a653-a479-4194-820d-254939bdcbb7",
    "metadata": {
-    "execution": {
-     "shell.execute_reply.end": "2025-09-30T13:24:08.597813Z",
-     "shell.execute_reply.started": "2025-09-30T13:24:02.777199Z",
-     "to_execute": "2025-09-30T13:24:02.800Z"
-    },
+    "execution": {},
     "isLargeOutputDisplay": true,
     "libroFormatter": "formatter-string",
     "trusted": true
